Fix expand/collapse caption JS
Further fallout from nesting the JS within the MediaVault namespace.

Fixes #468

--- a/app/assets/stylesheets/archive_items.scss
+++ b/app/assets/stylesheets/archive_items.scss
@@ -20,7 +20,7 @@ just to examine the template files unless/until we capture it better here.
 	<div
 		class="archive-item [archive-item--boxed]"
 		data-publishing-platform="{twitter|facebook|youtube|instagram|…}"
-		data-archive-caption-collapse-mode-value="{static|collapsed|expanded}"
+		data-media-vault--archive-caption-collapse-mode-value="{static|collapsed|expanded}"
 	>
 		<div class="archive-item__inner">
 			<a class="author">
@@ -152,7 +152,7 @@ may never be widely adopted. If you're reading this in a future when it's been a
 	font-weight: shared.$font-weight--normal;
 }
 
-.archive-item[data-archive-caption-collapse-mode-value="collapsed"] .archive-item__body-caption-content {
+.archive-item[data-media-vault--archive-caption-collapse-mode-value="collapsed"] .archive-item__body-caption-content {
 	--collapsed-lines-of-text: 3;
 
 	overflow: hidden;
@@ -166,7 +166,7 @@ may never be widely adopted. If you're reading this in a future when it's been a
 }
 
 @supports (-webkit-line-clamp: 2) {
-	.archive-item[data-archive-caption-collapse-mode-value="collapsed"] .archive-item__body-caption-content {
+	.archive-item[data-media-vault--archive-caption-collapse-mode-value="collapsed"] .archive-item__body-caption-content {
 		display: -webkit-box;
 		-webkit-line-clamp: var(--collapsed-lines-of-text);
 		-webkit-box-orient: vertical;
